# tcctdb

./: .eleventy.js  .env.example  .gitignore  .prettierrc  README.md  build.py  bundle.njk  bundle_css.njk.backup  bundle_js.njk  homepage.njk  package-lock.json  package.json  pyproject.toml  requirements.txt  svelte.config.js
_data/: images.js  people.js  productions.js
_includes/: index.njk  production.njk
css/: colors.css  fonts.css  layout.css  lightbox.css  reset.css
data/: people.yaml
data/productions/: 4ct-1940s-radio-christmas.yaml  4ct-alice.yaml  4ct-boeing-boeing.yaml  4ct-cabaret.yaml  4ct-descendants.yaml  4ct-into-the-woods.yaml  4ct-little-mermaid.yaml  4ct-little-shop.yaml  4ct-mary-poppins.yaml  4ct-sally-cotter.yaml  4ct-seussical.yaml  4ct-she-loves-me.yaml  4ct-sideways-stories.yaml  4ct-spongebob.yaml  bct-grumpy-old-men.yaml  bct-mamma-mia.yaml  ccp-hello-dolly.yaml  cvft-big-fish.yaml  cvft-bright-star.yaml  cvft-fiddler.yaml  cvft-something-rotten.yaml
people/: people.njk
productions/: cast.njk  crew.njk  pictures.njk  productions.njk  summary.njk
src/: app.css  bundle_js.njk  homepage.njk
src/_data/: images.js  people.js  productions.js  sanity.js
src/_includes/: index.njk  production.njk
src/css/: colors.css  layout.css  lightbox.css  main.css  reset.css  typography.css
src/lib/: data.ts  supabase.ts
static/: style.css
supabase/: schema.sql  seed.ts
templates/: companies.jinja2  company.jinja2  index.jinja2  layout.jinja2  links.jinja2  people.jinja2  person.jinja2  poster.jinja2  production.jinja2
utils/: sanity.js
(+35 files in other folders)
